0.83.4
  - Fixed loading saved states in fullscreen mode with
    the "aspect=true" setting. The timestamp for the
    saved states will be shown in the menu. (Wengier)
  - Added key mapper for sending the Ctrl+Alt+Del key,
    with HOST(F11/F12)+Del by default. (Wengier)
  - Added dosbox-x.conf setting to ignore the EGA/VGA
    "extended memory" bit. It was originally defined
    back when stock EGA/VGA cards could ship with 64KB
    of memory. The option is needed for DOS games that
    accidentally clear the bit when using unchained
    256-color modes (Mr. Blobby).
  - Added new default value "auto" for the setting
    "usescancodesauto" (in [sdl] section of the config
    file) to work around issues with non-US keyboard
    layouts on SDL1 builds. (Wengier)
  - Added code pages 808, 850, 852, 853, 855, 857,
    858, 869, 872 for host to guest codepage mapping
    on mounted local or overlay drives. (Wengier)
  - The mapper options "Increase recording volume" and
    "Decrease recording volume" as well as function
    "Show sound levels" (from MIXER command) appear
    now as menu items (under "Sound") too. (Wengier)
  - Fixed inputting of ASCII character 224 and 240
    in Windows SDL2 or MinGW builds. (Wengier)
  - Fixed possible DPMI error when running Windows
    98 installation from the DOSBox-X shell without
    using a batch file. (Wengier)
  - Fixed a bug in the FAT driver that can cause
    a byte to get lost if writing up to the end of
    a cluster, which seems to be behind the
    corruption with program group files when running
    Windows for Workgroups 3.11 from DOSBox-X shell.
    [https://github.com/joncampbell123/dosbox-x/issues/1758#issuecomment-665193066]
  - Unknown INT 2Fh calls are now debug output, not
    an error.
  - Added VESA BIOS mode 68h alias as indicated on
    the Vogons forum.
  - Fixed handling of config commands with spaces
    when the "shell configuration as commands"
    setting is enabled (quotes are needed in such